Fragment间常见的传递参数和接受参数的方式

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,7 +30,7 @@
     </fragment>
     <fragment
         android:id="@+id/sceondFragment"
-        android:name="com.jinxin.jetpacktest.navigation.SceondFragment"
+        android:name="com.jinxin.jetpacktest.navigation.SecondFragment"
         android:label="fragment_sceond"
         tools:layout="@layout/fragment_sceond" />
 </navigation>
