--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,18 @@
             app:popExitAnim="@anim/slide_out_right"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"/>
+
+        <!-- 添加参数 -->
+        <argument
+            android:name="userName"
+            app:argType="string"
+            android:defaultValue="unknown"/>
+
+        <!-- 添加参数 -->
+        <argument
+            android:name="age"
+            app:argType="integer"
+            android:defaultValue="0"/>
     </fragment>
     <fragment
         android:id="@+id/sceondFragment"
