--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,6 +39,9 @@
             android:name="age"
             app:argType="integer"
             android:defaultValue="0"/>
+        <action
+            android:id="@+id/action_mainFragment_to_deepLinkFragment"
+            app:destination="@id/deepLinkFragment" />
     </fragment>
     <fragment
         android:id="@+id/sceondFragment"
@@ -51,4 +54,12 @@
         android:name="com.jinxin.jetpacktest.navigation.SettingFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_setting" />
+    <fragment
+        android:id="@+id/deepLinkFragment"
+        android:name="com.jinxin.jetpacktest.navigation.DeepLinkFragment"
+        android:label="fragment_deep_link"
+        tools:layout="@layout/fragment_deep_link" >
+
+        <deepLink app:uri="www.jxodays.com/{params}"/>
+    </fragment>
 </navigation>
