--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,11 @@
         android:text="@string/btn_live_data_view_model_room"
         android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/btn_work_manager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_work_manager"
+        android:textAllCaps="false"/>
+
 </LinearLayout>
