--- a/app/src/main/res/layout/activity_work_manager_test.xml
+++ b/app/src/main/res/layout/activity_work_manager_test.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".workmanager.WorkManagerTestActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_start_ont_time_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始一次性任务" />
+
+    <Button
+        android:id="@+id/btn_cancel_ont_time_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="取消一次性任务" />
+
+  <Button
+      android:id="@+id/btn_start_periodic_task"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="开始周期性任务" />
+</LinearLayout>
