--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,11 @@
         android:text="@string/btn_work_manager"
         android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/btn_data_binding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_data_binding"
+        android:textAllCaps="false"/>
+
 </LinearLayout>
