--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,4 +83,11 @@
         android:text="@string/btn_recycle_view_binding"
         android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/btn_paging"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_paging"
+        android:textAllCaps="false"/>
+
 </LinearLayout>
