--- a/paging/src/main/res/layout/activity_paging_main.xml
+++ b/paging/src/main/res/layout/activity_paging_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PagingMainActivity">
+    tools:context=".positionaldatasource.PagingMainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_movie"
