--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,13 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_paging_page_keyed"
             android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/btn_paging_item_keyed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_paging_item_keyed"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
