--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,13 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:id="@+id/btn_navigation_ui"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_navigation_ui"
+            android:textAllCaps="false"/>
+
+        <Button
             android:id="@+id/btn_view_model"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
