--- a/navigation/src/main/res/layout/fragment_two_test.xml
+++ b/navigation/src/main/res/layout/fragment_two_test.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".navigation.DeepLinkFragment">
+    tools:context=".test.TwoTestFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
