--- a/livedata/src/main/res/layout/fragment_one.xml
+++ b/livedata/src/main/res/layout/fragment_one.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".livedata.TwoFragment">
+    tools:context=".fragment.OneFragment">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,5 +19,4 @@
         android:layout_marginTop="20dp"
         android:max="100"
         android:layout_centerInParent="true"/>
-
 </RelativeLayout>
