--- a/livedata/src/main/res/layout/fragment_two.xml
+++ b/livedata/src/main/res/layout/fragment_two.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".livedata.OneFragment">
+    tools:context=".fragment.TwoFragment">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,4 +19,5 @@
         android:layout_marginTop="20dp"
         android:max="100"
         android:layout_centerInParent="true"/>
+
 </RelativeLayout>
